deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-app
  namespace: post
spec:
  replicas: 2
  selector:
    matchLabels:
      app: post-app
  template:
    metadata:
      labels:
        app: post-app
    spec:
      containers:
        - name: jboss
          image: default-route-openshift-image-registry.apps.ext2.mtp.local/post/eap74-openjdk17-openshift-rhel8:2025-03-28-22-08-34
          ports:
            - containerPort: 8080
