service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-service
  namespace: post
spec:
  selector:
    app: post-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
